# youtube-transcriber

./: .gitignore  README.md  capacitor.config.ts  ionic.config.json  main.py  package.json  pyproject.toml  utils.py
