[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.19.0",
    "pytubefix>=8.12.2",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "watchdog>=6.0.0",
]
